--- a/envios-api/src/main/resources/application.properties
+++ b/envios-api/src/main/resources/application.properties
@@ -8,5 +8,10 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # JPA/Hibernate settings
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+# Configuración de zona horaria
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
