--- a/clientes-api/pom.xml
+++ b/clientes-api/pom.xml
@@ -104,6 +104,12 @@
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>com.perfulandia</groupId>
+            <artifactId>usuarios-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 	<build>
