--- a/usuarios-api/src/main/resources/application.yml
+++ b/usuarios-api/src/main/resources/application.yml
@@ -1,7 +1,10 @@
 spring:
   application:
     name: usuarios-api
-
+  security:
+    jwt:
+      contraseniaSecreta: "clave-super-secreta-para-firmar-jwt-123456789"
+      expiration: 3600000
   datasource:
     url: jdbc:mariadb://localhost:3306/perfulandia
     username: root
