wip: se deja funcionando flujo de registro,login y todos los metodos actuales entre usuario,cliente, vendedor

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
           - id: usuarios-api
             uri: http://localhost:8081
             predicates:
-              - Path=/api/usuarios/**
+              - Path=/**
 
 logging:
   level:
