--- a/usuarios-api/pom.xml
+++ b/usuarios-api/pom.xml
@@ -73,6 +73,18 @@
             <version>0.11.5</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.11.5</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId> <!-- usa jackson en lugar de gson -->
+			<version>0.11.5</version>
+			<scope>runtime</scope>
+		</dependency>
     </dependencies>
 
 	<build>
