--- a/ventas-api/pom.xml
+++ b/ventas-api/pom.xml
@@ -116,7 +116,11 @@
 			<version>2.7.7</version>
 			<scope>compile</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
+    </dependencies>
 	<build>
 		<plugins>
 			<plugin>
