--- a/soporte-api/src/main/resources/application.yml
+++ b/soporte-api/src/main/resources/application.yml
@@ -2,16 +2,16 @@ spring:
   application:
     name: soporte-api
 
-datasource:
-  url: jdbc:mariadb://localhost:3306/perfulandia
-  username: root
-  password:
-  driver-class-name: org.mariadb.jdbc.Driver
+  datasource:
+    url: jdbc:mariadb://localhost:3306/perfulandia
+    username: root
+    password: ""
+    driver-class-name: org.mariadb.jdbc.Driver
 
-jpa:
-  hibernate:
-    ddl-auto: update
-  show-sql: true
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
 server:
   port: 8085
