--- a/clientes-api/pom.xml
+++ b/clientes-api/pom.xml
@@ -114,6 +114,12 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
         </dependency>
+		  <dependency>
+    	<groupId>org.springdoc</groupId>
+    	<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    	<version>2.5.0</version>
+ 		 </dependency>
+
     </dependencies>
 
 	<build>
