--- a/clientes-api/pom.xml
+++ b/clientes-api/pom.xml
@@ -23,6 +23,12 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <!-- Web y REST -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -54,7 +60,7 @@
             <artifactId>hibernate-validator</artifactId>
         </dependency>
 
-        <!-- Swagger/OpenAPI -->
+        <!-- Documentación OpenAPI Swagger -->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
