fix:Se corrijen errores menores en gateway y api ventas

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -44,17 +44,10 @@ spring:
             predicates:
               - Path=/api/usuarios/**
 
-
-          - id: envios-api
-            uri: http://localhost:8086
-            predicates:
-              - Path=/**
-
-
           - id: cupones-api
             uri: http://localhost:8087
             predicates:
-              - Path=/**
+              - Path=/api/cupones/**
 
 logging:
   level:
