--- a/cupones-api/pom.xml
+++ b/cupones-api/pom.xml
@@ -50,7 +50,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+    </dependency>
+
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-hateoas</artifactId>
+    </dependency>
+
 
         <dependency>
             <groupId>org.mariadb.jdbc</groupId>
