--- a/soporte-api/pom.xml
+++ b/soporte-api/pom.xml
@@ -42,6 +42,11 @@
 		</dependency>
 
 		<dependency>
+  			<groupId>org.springframework.boot</groupId>
+  			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
 			<scope>runtime</scope>
