--- a/clientes-api/pom.xml
+++ b/clientes-api/pom.xml
@@ -110,6 +110,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.perfulandia</groupId>
+            <artifactId>usuarios-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 	<build>
